very basic formatting in progress

--- a/html/about.html
+++ b/html/about.html
@@ -2,8 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="/css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me Page</title>
+
 </head>
 <body>
 
@@ -18,8 +20,18 @@
         <li>placeholder</li>
         <li>placeholder</li>
     </ul>
+
+    <p>Timeline of my career</p>
+
+    <certifications> 
+        <ul>
+            <li>placeholder</li>
+            <li>placeholder</li>
+            <li>placeholder</li>
+        </ul>
+    </certifications>
     
-    <p>Back to <a href="/index.html">Home</a></p>
+    <p>Back to <a href="/">Home</a></p>
     
 </body>
 </html>
