--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -2,43 +2,46 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="/css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects</title>
 </head>
 
 <body>
-  <section class="portfolio-directory" id="portfolio-directory">
+  <section>
     <h2>Projects</h2>
 
-    <div class="portfolio-container">
+ 
 
-        <div class="portfolio-card">
+        <div>
             <!-- <img src="<path to icon image>" alt="description"/> -->
             <h3>Python</h3>
-            <p class="portfoliosubtext"> description </p>
+            <p> description </p>
             <hr/>
-            <p class="portfoliosubtext"><a class="portfolio-link" href="link to project" target="_blank">View</a></p>
+            <p><a class="portfolio-link" href="link to project" target="_blank">View</a></p>
         </div>
 
-     <div class="portfolio-card">
+        <div>
               <!-- <img src="<path to icon image>" alt="description"/> -->
             <h3>SQL</h3>
-            <p class="portfoliosubtext"> description </p>
+            <p> description </p>
             <hr/>
-            <p class="portfoliosubtext"><a class="portfolio-link" href="link to project" target="_blank">View</a></p>
+            <p><a href="link to project" target="_blank">View</a></p>
          </div>
 
-         <div class="portfolio-card">
+         <div>
               <!-- <img src="<path to icon image>" alt="description"/> -->
             <h3>Tableau</h3>
-            <p class="portfoliosubtext"> description </p>
+            <p> description </p>
             <hr/>
-            <p class="portfoliosubtext"><a class="portfolio-link" href="link to project" target="_blank">View</a></p>
+            <p><a href="link to project" target="_blank">View</a></p>
         </div>
+
+
     
 </section>
 
-    <p>Back to <a href="/index.html">Home</a></p>
+    <p>Back to <a href="/">Home</a></p>
 
 </body>
 </html>
