--- a/html/tableau.html
+++ b/html/tableau.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="/css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tableau Projects</title>
 </head>
@@ -15,7 +16,7 @@
         <li>Dashboard 3: </li>
     </ul>
     
-    <p>Back to <a href="/index.html">Home</a></p>
+    <p>Back to <a href="/">Home</a></p>
     
 </body>
 </html>
