--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <h1><bold>PORTFOLIO IN PROGRESS</bold></h1>
-    <section class="hero"  id="top">
+    <section""  id="top">
         <nav>
             <ul id="nav-list">
                 <li><a href="./html/about.html">About me</a></li>
@@ -20,8 +20,8 @@
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
-        <div class="hero-area">
-          <div class="hero-text" role="img" aria-label="view of a field">
+        <div>
+          <div>
               <h1>Laura Sieck</h1>
                 <h4>Cybersecurity Engineer & Data Analyst</h4>
           </div> 
@@ -32,19 +32,19 @@
     <section id="about">
         <h2>About Me</h2>
         <p></p>
-        <div class="headshot-container">
-            <img class="headshot" src="/images/AboutPhoto.jpeg" alt="Laura Sieck"/>
+        <div>
+            <img src="/images/AboutPhoto.jpeg" alt="Laura Sieck"/>
         </div>
       </section>
 
-  <hr class="line">
+  <hr>
 
 <footer id="contact">
-    <hr class="line">
+    <hr>
     <h2>Contact Me</h2>
-    <ul class="contactlist">
-        <li><i class="material-icons">email</i> <a href="mailto:sieck519@gmail.com" class="contactlinks"> sieck519@gmail.com</a></li>
-        <li><i class="material-icons">link</i> <a href="https://www.linkedin.com/in/laurasieck/" target="_blank" class="contactlinks">LinkedIn</a></li>
+    <ul>
+        <li><i>email</i> <a href="mailto:sieck519@gmail.com"> sieck519@gmail.com</a></li>
+        <li><i>link</i> <a href="https://www.linkedin.com/in/laurasieck/" target="_blank">LinkedIn</a></li>
         <br>
         <a href="#top"><button>Back to Top</button></a>
     <h4>&copy; 2024 Created and Maintained by Laura Sieck</h4>
