--- a/html/python.html
+++ b/html/python.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="/css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Python Projects</title>
 </head>
@@ -16,6 +17,6 @@
         <li>Project 3: </li>
     </ul>
 
-    <p>Back to <a href="/index.html">Home</a></p>
+    <p>Back to <a href="/">Home</a></p>
 </body>
 </html>
