added tableau link and fixed other links

--- a/html/about.html
+++ b/html/about.html
@@ -31,6 +31,7 @@
         </ul>
     </certifications>
     
+    <p><a href="portfolio.html">Check out my work</a></p>
     <p>Back to <a href="/">Home</a></p>
     
 </body>
