--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -10,33 +10,25 @@
 <body>
   <section>
     <h2>Projects</h2>
-
- 
-
+<hr>
         <div>
-            <!-- <img src="<path to icon image>" alt="description"/> -->
             <h3>Python</h3>
             <p> description </p>
-            <hr/>
-            <p><a class="portfolio-link" href="link to project" target="_blank">View</a></p>
+            <p><a href="python.html">View</a></p>
         </div>
-
+<hr>
         <div>
-              <!-- <img src="<path to icon image>" alt="description"/> -->
             <h3>SQL</h3>
             <p> description </p>
-            <hr/>
-            <p><a href="link to project" target="_blank">View</a></p>
+                <p><a href="sql.html">View</a></p>
          </div>
-
+<hr>
          <div>
-              <!-- <img src="<path to icon image>" alt="description"/> -->
             <h3>Tableau</h3>
             <p> description </p>
-            <hr/>
-            <p><a href="link to project" target="_blank">View</a></p>
+            <p><a href="tableau.html">View</a></p>
         </div>
-
+<hr>
 
     
 </section>
