--- a/html/python.html
+++ b/html/python.html
@@ -17,6 +17,7 @@
         <li>Project 3: </li>
     </ul>
 
+    <p>Back to <a href="portfolio.html">Projects</a></p>
     <p>Back to <a href="/">Home</a></p>
 </body>
 </html>
