--- a/html/sql.html
+++ b/html/sql.html
@@ -16,6 +16,7 @@
         <li>Query 3: </li>
     </ul>
 
+    <p>Back to <a href="portfolio.html">Projects</a></p>
     <p>Back to <a href="/">Home</a></p>
     
 </body>
