--- a/html/tableau.html
+++ b/html/tableau.html
@@ -9,8 +9,7 @@
 <body>
 
     <h1>Tableau Projects</h1>
-    <p>Tableau is a powerful data visualization tool that is used in the business world to create interactive dashboards and reports. It is a great tool for data analysis and data visualization. Tableau is used by businesses to create dashboards that help them make better decisions based on their data. Tableau is a great tool for data analysis and data visualization. It is used by businesses to create dashboards that help them make better decisions based on their data.</p>
-    
+    <p>Tableau is a data visualization tool used to create interactive charts, dashboards, and reports that help users analyze and interpret data insights quickly and easily.</p>    
     <p>Here are some of the Tableau projects that I have worked on:</p>
     <ul>
         <li>Dashboard 1: </li>
