--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -1,39 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="/css/style.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects</title>
-</head>
+	<head>
+		<meta charset="UTF-8" />
+		<link
+			rel="stylesheet"
+			href="/css/style.css"
+		/>
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1.0"
+		/>
+		<title>Projects</title>
+	</head>
 
-<body>
-  <section>
-    <h2>Projects</h2>
-<hr>
-        <div>
-            <h3>Python</h3>
-            <p> description </p>
-            <p><a href="python.html">View</a></p>
-        </div>
-<hr>
-        <div>
-            <h3>SQL</h3>
-            <p> description </p>
-                <p><a href="sql.html">View</a></p>
-         </div>
-<hr>
-         <div>
-            <h3>Tableau</h3>
-            <p> description </p>
-            <p><a href="tableau.html">View</a></p>
-        </div>
-<hr>
-
-    
-</section>
-
-    <p>Back to <a href="/">Home</a></p>
-
-</body>
+	<body>
+		<section>
+			<h2>Projects</h2>
+			<hr />
+			<div>
+				<h3>Python</h3>
+				<p>description</p>
+				<p><a href="python.html">View</a></p>
+			</div>
+			<hr />
+			<div>
+				<h3>SQL</h3>
+				<p>description</p>
+				<p><a href="sql.html">View</a></p>
+			</div>
+			<hr />
+			<div>
+				<h3>Tableau</h3>
+				<p>description</p>
+				<p><a href="tableau.html">View</a></p>
+			</div>
+			<hr />
+		</section>
+	</body>
 </html>
