--- a/html/sql.html
+++ b/html/sql.html
@@ -1,23 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="/css/style.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SQL Queries</title>
-</head>
-<body>
+	<head>
+		<meta charset="UTF-8" />
+		<link
+			rel="stylesheet"
+			href="/css/style.css"
+		/>
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1.0"
+		/>
+		<title>SQL Queries</title>
+	</head>
+	<body>
+		<h1>SQL Queries</h1>
+		<p>Here are some of the SQL queries that I have worked on:</p>
+		<ul>
+			<li>Query 1:</li>
+			<li>Query 2:</li>
+			<li>Query 3:</li>
+		</ul>
 
-    <h1>SQL Queries</h1>
-    <p>Here are some of the SQL queries that I have worked on:</p>
-    <ul>
-        <li>Query 1: </li>
-        <li>Query 2: </li>
-        <li>Query 3: </li>
-    </ul>
-
-    <p>Back to <a href="portfolio.html">Projects</a></p>
-    <p>Back to <a href="/">Home</a></p>
-    
-</body>
+		<p>Back to <a href="portfolio.html">Projects</a></p>
+	</body>
 </html>
