--- a/html/tableau.html
+++ b/html/tableau.html
@@ -1,26 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="/css/style.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tableau Projects</title>
-</head>
-<body>
+	<head>
+		<meta charset="UTF-8" />
+		<link
+			rel="stylesheet"
+			href="/css/style.css"
+		/>
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1.0"
+		/>
+		<title>Tableau Projects</title>
+	</head>
+	<body>
+		<h1>Tableau Projects</h1>
+		<p>
+			Tableau is a data visualization tool used to create interactive charts,
+			dashboards, and reports that help users analyze and interpret data
+			insights quickly and easily.
+		</p>
+		<p>Here are some of the Tableau projects that I have worked on:</p>
+		<ul>
+			<li>Dashboard 1:</li>
+			<li>Dashboard 2:</li>
+			<li>Dashboard 3:</li>
+		</ul>
 
-    <h1>Tableau Projects</h1>
-    <p>Tableau is a data visualization tool used to create interactive charts, dashboards, and reports that help users analyze and interpret data insights quickly and easily.</p>    
-    <p>Here are some of the Tableau projects that I have worked on:</p>
-    <ul>
-        <li>Dashboard 1: </li>
-        <li>Dashboard 2: </li>
-        <li>Dashboard 3: </li>
-    </ul>
+		<p>
+			Check out my Tableau profile
+			<a
+				href="https://public.tableau.com/app/profile/laura.sieck/vizzes"
+				target="_blank"
+				>here</a
+			>.
+		</p>
 
-    <p>Check out my Tableau profile <a href="https://public.tableau.com/app/profile/laura.sieck/vizzes" target="_blank">here</a>.</p>
-    
-    <p>Back to <a href="portfolio.html">Projects</a></p>
-    <p>Back to <a href="/">Home</a></p>
-    
-</body>
+		<p>Back to <a href="portfolio.html">Projects</a></p>
+	</body>
 </html>
