--- a/index.html
+++ b/index.html
@@ -1,54 +1,73 @@
 <!DOCTYPE html>
-
 <html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta
+			name="viewport"
+			content="width-device-width, initial-scale=1.0"
+		/>
+		<link
+			rel="stylesheet"
+			href="./css/style.css"
+		/>
+		<link
+			rel="stylesheet"
+			href="https://fonts.googleapis.com/icon?family=Material+Icons"
+		/>
+		<title>Laura Sieck Portfolio</title>
+	</head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width-device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <title> Laura Sieck Portfolio </title>
-</head>
+	<body>
+		<h1><bold>PORTFOLIO IN PROGRESS</bold></h1>
+		<section>
+			<nav>
+				<ul id="nav-list">
+					<li><a href="./html/about.html">About me</a></li>
+					<li><a href="./html/portfolio.html">Portfolio</a></li>
+					<li><a href="#contact">Contact</a></li>
+				</ul>
+			</nav>
+			<div>
+				<div>
+					<h1>Laura Sieck</h1>
+					<h4>Cybersecurity Engineer & Data Analyst</h4>
+				</div>
+			</div>
+		</section>
 
-<body>
-    <h1><bold>PORTFOLIO IN PROGRESS</bold></h1>
-    <section""  id="top">
-        <nav>
-            <ul id="nav-list">
-                <li><a href="./html/about.html">About me</a></li>
-                <li><a href="./html/portfolio.html">Portfolio</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
-        <div>
-          <div>
-              <h1>Laura Sieck</h1>
-                <h4>Cybersecurity Engineer & Data Analyst</h4>
-          </div> 
-        </div>
-    </section>
-    
+		<section id="about">
+			<h2>About Me</h2>
+			<p></p>
+			<div>
+				<img
+					src="/images/AboutPhoto.jpeg"
+					alt="Laura Sieck"
+				/>
+			</div>
+		</section>
 
-    <section id="about">
-        <h2>About Me</h2>
-        <p></p>
-        <div>
-            <img src="/images/AboutPhoto.jpeg" alt="Laura Sieck"/>
-        </div>
-      </section>
+		<hr />
 
-  <hr>
-
-<footer id="contact">
-    <hr>
-    <h2>Contact Me</h2>
-    <ul>
-        <li><i>email</i> <a href="mailto:sieck519@gmail.com"> sieck519@gmail.com</a></li>
-        <li><i>link</i> <a href="https://www.linkedin.com/in/laurasieck/" target="_blank">LinkedIn</a></li>
-        <br>
-        <a href="#top"><button>Back to Top</button></a>
-    <h4>&copy; 2024 Created and Maintained by Laura Sieck</h4>
-    </ul> 
-</footer>
-</body>
+		<footer id="contact">
+			<hr />
+			<h2>Contact Me</h2>
+			<ul>
+				<li>
+					<i>email</i>
+					<a href="mailto:sieck519@gmail.com"> sieck519@gmail.com</a>
+				</li>
+				<li>
+					<i>link</i>
+					<a
+						href="https://www.linkedin.com/in/laurasieck/"
+						target="_blank"
+						>LinkedIn</a
+					>
+				</li>
+				<br />
+				<a href="#top"><button>Back to Top</button></a>
+				<h4>&copy; 2024 Created and Maintained by Laura Sieck</h4>
+			</ul>
+		</footer>
+	</body>
 </html>
