--- a/html/python.html
+++ b/html/python.html
@@ -1,23 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="/css/style.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Python Projects</title>
-</head>
+	<head>
+		<meta charset="UTF-8" />
+		<link
+			rel="stylesheet"
+			href="/css/style.css"
+		/>
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1.0"
+		/>
+		<title>Python Projects</title>
+	</head>
 
-<body>
-    
-    <h1>Python Projects</h1>
-    <p>Here are some of the Python projects that I have worked on:</p>
-    <ul>
-        <li>Project 1: </li>
-        <li>Project 2: </li>
-        <li>Project 3: </li>
-    </ul>
+	<body>
+		<h1>Python Projects</h1>
+		<p>Here are some of the Python projects that I have worked on:</p>
+		<ul>
+			<li>Project 1:</li>
+			<li>Project 2:</li>
+			<li>Project 3:</li>
+		</ul>
 
-    <p>Back to <a href="portfolio.html">Projects</a></p>
-    <p>Back to <a href="/">Home</a></p>
-</body>
+		<p>Back to <a href="portfolio.html">Projects</a></p>
+	</body>
 </html>
