--- a/html/contact.html
+++ b/html/contact.html
@@ -6,19 +6,19 @@
 			name="viewport"
 			content="width=device-width, initial-scale=1.0"
 		/>
-		<title>My Portfolio</title>
+		<title>Contact Page</title>
 		<link
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.3/css/bulma.min.css"
 		/>
 		<link
 			rel="stylesheet"
-			href="css/style.css"
+			href="/css/style.css"
 		/>
 	</head>
 
 	<body>
-		<h1><bold>PORTFOLIO IN PROGRESS</bold></h1>
+		<h1><bold>CONTACT</bold></h1>
 		<section>
 			<nav
 				class="navbar"
@@ -30,7 +30,12 @@
 					class="navbar-menu"
 				>
 					<div class="navbar-start">
-						<a class="navbar-item"> Home </a>
+						<a
+							class="navbar-item"
+							href="/index.html"
+						>
+							Home
+						</a>
 
 						<a
 							class="navbar-item"
@@ -40,12 +45,7 @@
 						</a>
 
 						<div class="navbar-item has-dropdown is-hoverable">
-							<a
-								class="navbar-link"
-								href="/html/portfolio.html"
-							>
-								Projects
-							</a>
+							<a class="navbar-link"> Projects </a>
 
 							<div class="navbar-dropdown">
 								<a
@@ -74,7 +74,7 @@
 						<div class="navbar-item">
 							<a
 								class="navbar-item"
-								href="/html/contact.html"
+								href="contact.html"
 							>
 								Contact Me
 							</a>
@@ -85,6 +85,27 @@
 		</section>
 
 		<hr />
+
+		<div class="container">
+			<p>This is how to contact me</p>
+
+			<h2>Contact Me</h2>
+			<ul>
+				<li>
+					<i>email</i>
+					<a href="mailto:sieck519@gmail.com"> sieck519@gmail.com</a>
+				</li>
+				<li>
+					<i>link</i>
+					<a
+						href="https://www.linkedin.com/in/laurasieck/"
+						target="_blank"
+						>LinkedIn</a
+					>
+				</li>
+				<br />
+			</ul>
+		</div>
 
 		<footer class="footer">
 			<div class="content has-text-centered">
