--- a/html/python.html
+++ b/html/python.html
@@ -2,26 +2,108 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<link
-			rel="stylesheet"
-			href="/css/style.css"
-		/>
 		<meta
 			name="viewport"
 			content="width=device-width, initial-scale=1.0"
 		/>
 		<title>Python Projects</title>
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.3/css/bulma.min.css"
+		/>
+		<link
+			rel="stylesheet"
+			href="/css/style.css"
+		/>
 	</head>
 
 	<body>
-		<h1>Python Projects</h1>
-		<p>Here are some of the Python projects that I have worked on:</p>
-		<ul>
-			<li>Project 1:</li>
-			<li>Project 2:</li>
-			<li>Project 3:</li>
-		</ul>
+		<h1><bold>PYTHON</bold></h1>
+		<section>
+			<nav
+				class="navbar"
+				role="navigation"
+				aria-label="main navigation"
+			>
+				<div
+					id="navbarBasicExample"
+					class="navbar-menu"
+				>
+					<div class="navbar-start">
+						<a
+							class="navbar-item"
+							href="/index.html"
+						>
+							Home
+						</a>
 
+						<a
+							class="navbar-item"
+							href="about.html"
+						>
+							About Me
+						</a>
+
+						<div class="navbar-item has-dropdown is-hoverable">
+							<a class="navbar-link"> Projects </a>
+
+							<div class="navbar-dropdown">
+								<a
+									class="navbar-item"
+									href="/html/python.html"
+								>
+									Python
+								</a>
+								<a
+									class="navbar-item"
+									href="/html/sql.html"
+								>
+									SQL
+								</a>
+								<a
+									class="navbar-item"
+									href="/html/tableau.html"
+								>
+									Tableau
+								</a>
+							</div>
+						</div>
+					</div>
+
+					<div class="navbar-end">
+						<div class="navbar-item">
+							<a
+								class="navbar-item"
+								href="contact.html"
+							>
+								Contact Me
+							</a>
+						</div>
+					</div>
+				</div>
+			</nav>
+		</section>
+
+		<hr />
+		<div class="container">
+			<p>Python is...</p>
+			<p>Here are some of the Python projects that I have worked on:</p>
+			<ul>
+				<li>Project 1:</li>
+				<li>Project 2:</li>
+				<li>Project 3:</li>
+			</ul>
+
+			<hr />
+		</div>
 		<p>Back to <a href="portfolio.html">Projects</a></p>
+		<footer class="footer">
+			<div class="content has-text-centered">
+				<p>
+					Created and Maintained by Laura Sieck. Licensed
+					<a href="https://opensource.org/license/mit">MIT</a>.
+				</p>
+			</div>
+		</footer>
 	</body>
 </html>
