--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -2,21 +2,91 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<link
-			rel="stylesheet"
-			href="/css/style.css"
-		/>
+
 		<meta
 			name="viewport"
 			content="width=device-width, initial-scale=1.0"
 		/>
 		<title>Projects</title>
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.3/css/bulma.min.css"
+		/>
+		<link
+			rel="stylesheet"
+			href="/css/style.css"
+		/>
 	</head>
 
 	<body>
+		<h1><bold>PROJECTS</bold></h1>
 		<section>
-			<h2>Projects</h2>
-			<hr />
+			<nav
+				class="navbar"
+				role="navigation"
+				aria-label="main navigation"
+			>
+				<div
+					id="navbarBasicExample"
+					class="navbar-menu"
+				>
+					<div class="navbar-start">
+						<a
+							class="navbar-item"
+							href="/index.html"
+						>
+							Home
+						</a>
+
+						<a
+							class="navbar-item"
+							href="/html/about.html"
+						>
+							About Me
+						</a>
+
+						<div class="navbar-item has-dropdown is-hoverable">
+							<a class="navbar-link"> Projects </a>
+
+							<div class="navbar-dropdown">
+								<a
+									class="navbar-item"
+									href="/html/python.html"
+								>
+									Python
+								</a>
+								<a
+									class="navbar-item"
+									href="/html/sql.html"
+								>
+									SQL
+								</a>
+								<a
+									class="navbar-item"
+									href="/html/tableau.html"
+								>
+									Tableau
+								</a>
+							</div>
+						</div>
+					</div>
+
+					<div class="navbar-end">
+						<div class="navbar-item">
+							<a
+								class="navbar-item"
+								href="contact.html"
+							>
+								Contact Me
+							</a>
+						</div>
+					</div>
+				</div>
+			</nav>
+		</section>
+
+		<hr />
+		<div class="container">
 			<div>
 				<h3>Python</h3>
 				<p>description</p>
@@ -34,7 +104,15 @@
 				<p>description</p>
 				<p><a href="tableau.html">View</a></p>
 			</div>
-			<hr />
-		</section>
+		</div>
+		<hr />
+		<footer class="footer">
+			<div class="content has-text-centered">
+				<p>
+					Created and Maintained by Laura Sieck. Licensed
+					<a href="https://opensource.org/license/mit">MIT</a>.
+				</p>
+			</div>
+		</footer>
 	</body>
 </html>
