--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 						<a
 							class="navbar-item"
-							href="/about.html"
+							href="data-portfolio/about.html"
 						>
 							About Me
 						</a>
