--- a/assets/about.html
+++ b/assets/about.html
@@ -2,11 +2,13 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
+
 		<meta
 			name="viewport"
 			content="width=device-width, initial-scale=1.0"
 		/>
-		<title>Contact Page</title>
+		<title>About Me Page</title>
+
 		<link
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.3/css/bulma.min.css"
@@ -18,7 +20,7 @@
 	</head>
 
 	<body>
-		<h1><bold>CONTACT</bold></h1>
+		<h1><bold>ABOUT ME</bold></h1>
 		<section>
 			<nav
 				class="navbar"
@@ -39,7 +41,7 @@
 
 						<a
 							class="navbar-item"
-							href="/html/about.html"
+							href="about.html"
 						>
 							About Me
 						</a>
@@ -50,19 +52,19 @@
 							<div class="navbar-dropdown">
 								<a
 									class="navbar-item"
-									href="/html/python.html"
+									href="python.html"
 								>
 									Python
 								</a>
 								<a
 									class="navbar-item"
-									href="/html/sql.html"
+									href="sql.html"
 								>
 									SQL
 								</a>
 								<a
 									class="navbar-item"
-									href="/html/tableau.html"
+									href="tableau.html"
 								>
 									Tableau
 								</a>
@@ -87,26 +89,31 @@
 		<hr />
 
 		<div class="container">
-			<p>This is how to contact me</p>
+			<p>
+				Hi, I'm Laura Sieck. I'm an engineer with a passion for coding and data
+				analysis. I have experience working with Python, SQL, and Tableau to
+				create data-driven solutions.
+			</p>
 
-			<h2>Contact Me</h2>
+			<p>Links Below:</p>
 			<ul>
-				<li>
-					<i>email</i>
-					<a href="mailto:sieck519@gmail.com"> sieck519@gmail.com</a>
-				</li>
-				<li>
-					<i>link</i>
-					<a
-						href="https://www.linkedin.com/in/laurasieck/"
-						target="_blank"
-						>LinkedIn</a
-					>
-				</li>
-				<br />
+				<li>placeholder</li>
+				<li>placeholder</li>
+				<li>placeholder</li>
 			</ul>
+
+			<p>Timeline of my career</p>
+
+			<certifications>
+				<ul>
+					<li>placeholder</li>
+					<li>placeholder</li>
+					<li>placeholder</li>
+				</ul>
+			</certifications>
 		</div>
 
+		<p><a href="portfolio.html">Check out my work</a></p>
 		<footer class="footer">
 			<div class="content has-text-centered">
 				<p>
