--- a/assets/contact.html
+++ b/assets/contact.html
@@ -6,7 +6,7 @@
 			name="viewport"
 			content="width=device-width, initial-scale=1.0"
 		/>
-		<title>Tableau Projects</title>
+		<title>Contact Page</title>
 		<link
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.3/css/bulma.min.css"
@@ -18,7 +18,7 @@
 	</head>
 
 	<body>
-		<h1><bold>TABLEAU</bold></h1>
+		<h1><bold>CONTACT</bold></h1>
 		<section>
 			<nav
 				class="navbar"
@@ -50,19 +50,19 @@
 							<div class="navbar-dropdown">
 								<a
 									class="navbar-item"
-									href="/html/python.html"
+									href="python.html"
 								>
 									Python
 								</a>
 								<a
 									class="navbar-item"
-									href="/html/sql.html"
+									href="sql.html"
 								>
 									SQL
 								</a>
 								<a
 									class="navbar-item"
-									href="/html/tableau.html"
+									href="tableau.html"
 								>
 									Tableau
 								</a>
@@ -85,30 +85,27 @@
 		</section>
 
 		<hr />
-		<div class="container">
-			<p>
-				Tableau is a data visualization tool used to create interactive charts,
-				dashboards, and reports that help users analyze and interpret data
-				insights quickly and easily.
-			</p>
-			<p>Here are some of the Tableau projects that I have worked on:</p>
-			<ul>
-				<li>Dashboard 1:</li>
-				<li>Dashboard 2:</li>
-				<li>Dashboard 3:</li>
-			</ul>
 
-			<hr />
+		<div class="container">
+			<p>This is how to contact me</p>
+
+			<h2>Contact Me</h2>
+			<ul>
+				<li>
+					<i>email</i>
+					<a href="mailto:sieck519@gmail.com"> sieck519@gmail.com</a>
+				</li>
+				<li>
+					<i>link</i>
+					<a
+						href="https://www.linkedin.com/in/laurasieck/"
+						target="_blank"
+						>LinkedIn</a
+					>
+				</li>
+				<br />
+			</ul>
 		</div>
-		<p>
-			Check out my Tableau profile
-			<a
-				href="https://public.tableau.com/app/profile/laura.sieck/vizzes"
-				target="_blank"
-				>here</a
-			>.
-		</p>
-		<p>Back to <a href="portfolio.html">Projects</a></p>
 
 		<footer class="footer">
 			<div class="content has-text-centered">
