--- a/assets/sql.html
+++ b/assets/sql.html
@@ -6,7 +6,7 @@
 			name="viewport"
 			content="width=device-width, initial-scale=1.0"
 		/>
-		<title>Python Projects</title>
+		<title>SQL Queries</title>
 		<link
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.3/css/bulma.min.css"
@@ -18,7 +18,7 @@
 	</head>
 
 	<body>
-		<h1><bold>PYTHON</bold></h1>
+		<h1><bold>SQL</bold></h1>
 		<section>
 			<nav
 				class="navbar"
@@ -50,19 +50,19 @@
 							<div class="navbar-dropdown">
 								<a
 									class="navbar-item"
-									href="/html/python.html"
+									href="python.html"
 								>
 									Python
 								</a>
 								<a
 									class="navbar-item"
-									href="/html/sql.html"
+									href="sql.html"
 								>
 									SQL
 								</a>
 								<a
 									class="navbar-item"
-									href="/html/tableau.html"
+									href="tableau.html"
 								>
 									Tableau
 								</a>
@@ -86,12 +86,12 @@
 
 		<hr />
 		<div class="container">
-			<p>Python is...</p>
-			<p>Here are some of the Python projects that I have worked on:</p>
+			<p>SQL is...</p>
+			<p>Here are some of the SQL queries that I have worked on:</p>
 			<ul>
-				<li>Project 1:</li>
-				<li>Project 2:</li>
-				<li>Project 3:</li>
+				<li>Query 1:</li>
+				<li>Query 2:</li>
+				<li>Query 3:</li>
 			</ul>
 
 			<hr />
