--- a/assets/tableau.html
+++ b/assets/tableau.html
@@ -2,13 +2,11 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-
 		<meta
 			name="viewport"
 			content="width=device-width, initial-scale=1.0"
 		/>
-		<title>About Me Page</title>
-
+		<title>Tableau Projects</title>
 		<link
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.3/css/bulma.min.css"
@@ -20,7 +18,7 @@
 	</head>
 
 	<body>
-		<h1><bold>ABOUT ME</bold></h1>
+		<h1><bold>TABLEAU</bold></h1>
 		<section>
 			<nav
 				class="navbar"
@@ -41,7 +39,7 @@
 
 						<a
 							class="navbar-item"
-							href="/html/about.html"
+							href="about.html"
 						>
 							About Me
 						</a>
@@ -52,19 +50,19 @@
 							<div class="navbar-dropdown">
 								<a
 									class="navbar-item"
-									href="/html/python.html"
+									href="python.html"
 								>
 									Python
 								</a>
 								<a
 									class="navbar-item"
-									href="/html/sql.html"
+									href="sql.html"
 								>
 									SQL
 								</a>
 								<a
 									class="navbar-item"
-									href="/html/tableau.html"
+									href="tableau.html"
 								>
 									Tableau
 								</a>
@@ -87,33 +85,31 @@
 		</section>
 
 		<hr />
-
 		<div class="container">
 			<p>
-				Hi, I'm Laura Sieck. I'm an engineer with a passion for coding and data
-				analysis. I have experience working with Python, SQL, and Tableau to
-				create data-driven solutions.
+				Tableau is a data visualization tool used to create interactive charts,
+				dashboards, and reports that help users analyze and interpret data
+				insights quickly and easily.
 			</p>
-
-			<p>Links Below:</p>
+			<p>Here are some of the Tableau projects that I have worked on:</p>
 			<ul>
-				<li>placeholder</li>
-				<li>placeholder</li>
-				<li>placeholder</li>
+				<li>Dashboard 1:</li>
+				<li>Dashboard 2:</li>
+				<li>Dashboard 3:</li>
 			</ul>
 
-			<p>Timeline of my career</p>
-
-			<certifications>
-				<ul>
-					<li>placeholder</li>
-					<li>placeholder</li>
-					<li>placeholder</li>
-				</ul>
-			</certifications>
+			<hr />
 		</div>
+		<p>
+			Check out my Tableau profile
+			<a
+				href="https://public.tableau.com/app/profile/laura.sieck/vizzes"
+				target="_blank"
+				>here</a
+			>.
+		</p>
+		<p>Back to <a href="portfolio.html">Projects</a></p>
 
-		<p><a href="portfolio.html">Check out my work</a></p>
 		<footer class="footer">
 			<div class="content has-text-centered">
 				<p>
