--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 						<a
 							class="navbar-item"
-							href="data-portfolio/about.html"
+							href="/assets/about.html"
 						>
 							About Me
 						</a>
@@ -42,7 +42,7 @@
 						<div class="navbar-item has-dropdown is-hoverable">
 							<a
 								class="navbar-link"
-								href="/html/portfolio.html"
+								href="/assets/portfolio.html"
 							>
 								Projects
 							</a>
@@ -50,19 +50,19 @@
 							<div class="navbar-dropdown">
 								<a
 									class="navbar-item"
-									href="/html/python.html"
+									href="/assets/python.html"
 								>
 									Python
 								</a>
 								<a
 									class="navbar-item"
-									href="/html/sql.html"
+									href="/assets/sql.html"
 								>
 									SQL
 								</a>
 								<a
 									class="navbar-item"
-									href="/html/tableau.html"
+									href="/assets/tableau.html"
 								>
 									Tableau
 								</a>
@@ -74,7 +74,7 @@
 						<div class="navbar-item">
 							<a
 								class="navbar-item"
-								href="/html/contact.html"
+								href="/assets/contact.html"
 							>
 								Contact Me
 							</a>
