--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 						<a
 							class="navbar-item"
-							href="/assets/about.html"
+							href="/assets/about.html" target= "_blank"
 						>
 							About Me
 						</a>
