switching to single page

--- a/index.html
+++ b/index.html
@@ -30,11 +30,9 @@
 					class="navbar-menu"
 				>
 					<div class="navbar-start">
-						<a class="navbar-item"> Home </a>
-
 						<a
 							class="navbar-item"
-							href="/assets/about.html" target= "_blank"
+							href="#about"
 						>
 							About Me
 						</a>
@@ -42,7 +40,7 @@
 						<div class="navbar-item has-dropdown is-hoverable">
 							<a
 								class="navbar-link"
-								href="/assets/portfolio.html"
+								href="#portfolio"
 							>
 								Projects
 							</a>
@@ -50,19 +48,19 @@
 							<div class="navbar-dropdown">
 								<a
 									class="navbar-item"
-									href="/assets/python.html"
+									href="#python"
 								>
 									Python
 								</a>
 								<a
 									class="navbar-item"
-									href="/assets/sql.html"
+									href="#sql"
 								>
 									SQL
 								</a>
 								<a
 									class="navbar-item"
-									href="/assets/tableau.html"
+									href="#tableau"
 								>
 									Tableau
 								</a>
@@ -74,7 +72,7 @@
 						<div class="navbar-item">
 							<a
 								class="navbar-item"
-								href="/assets/contact.html"
+								href="#contact"
 							>
 								Contact Me
 							</a>
@@ -83,6 +81,84 @@
 				</div>
 			</nav>
 		</section>
+
+		<hr />
+
+		<hr />
+
+		<div
+			class="container"
+			id="about"
+		>
+			<p>
+				Hi, I'm Laura Sieck. I'm an engineer with a passion for coding and data
+				analysis. I have experience working with Python, SQL, and Tableau to
+				create data-driven solutions.
+			</p>
+
+			<p>Timeline of my career</p>
+
+			<certifications>
+				<ul>
+					<li>placeholder</li>
+					<li>placeholder</li>
+					<li>placeholder</li>
+				</ul>
+			</certifications>
+		</div>
+
+		<div
+			class="container"
+			id="portfolio"
+		>
+			<div>
+				<h3 id="python">Python</h3>
+				<p>description</p>
+			</div>
+			<hr />
+			<div>
+				<h3 id="sql">SQL</h3>
+				<p>description</p>
+			</div>
+			<hr />
+			<div>
+				<h3 id="tableau">Tableau</h3>
+				<p>description</p>
+				<p>
+					Check out my Tableau profile
+					<a
+						href="https://public.tableau.com/app/profile/laura.sieck/vizzes"
+						target="_blank"
+						>here</a
+					>.
+				</p>
+			</div>
+		</div>
+		<hr />
+
+		<div
+			class="container"
+			id="contact"
+		>
+			<p>This is how to contact me</p>
+
+			<h2>Contact Me</h2>
+			<ul>
+				<li>
+					<i>email</i>
+					<a href="mailto:sieck519@gmail.com"> sieck519@gmail.com</a>
+				</li>
+				<li>
+					<i>link</i>
+					<a
+						href="https://www.linkedin.com/in/laurasieck/"
+						target="_blank"
+						>LinkedIn</a
+					>
+				</li>
+				<br />
+			</ul>
+		</div>
 
 		<hr />
 
